# Large-Sudoku-Solver

./: Cargo.toml  README.md
benches/: all_different_benchmark.rs
puzzles/: 100x100_1.txt  144x144_1.txt  16x16_1.txt  16x16_2.txt  16x16_X_1.txt  16x16_X_2.txt  16x16_X_3.txt  36x36_1.txt  36x36_X_1.txt  400x400_1.txt  400x400_2.txt  64x64_X_1.txt  81x81_1.txt  9x9_1.txt  9x9_2.txt
src/: lib.rs  main.rs  parser.rs  solver.rs  types.rs  value_set.rs
src/io/: input.rs  mod.rs  output.rs  parser.rs
src/solver/: all_different.rs  cell_accumulator.rs  engine.rs  handlers.rs  minimizer.rs  mod.rs  runner.rs  solver.rs
