[package]
name = "large_sudoku_solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1"
indicatif = "0.16.2"
derive_more = "0.99.0"
num = "0.4.0"

[profile.release]
debug = true
# lto = true
panic = "abort"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "all_different_benchmark"
harness = false