[package]
name = "large_sudoku_solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1"
indicatif = "0.16.2"
derive_more = "0.99.0"
num = "0.4.0"
clap = { version = "3.2.12", features = ["derive"] }
rand = "0.8.5"
atty = "0.2"

[profile.dev]
opt-level = 0

[profile.release]
debug = true
# lto = true
panic = "abort"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "all_different_benchmark"
harness = false

[features]
# Only compile i64 value set.
# Useful for making asm output easier to read.
i64_value_set = []
